<resources>
    <string name="app_name">Patacoré</string>

    <!--Login-->
    <string name="title_activity_login">Ingresar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Welcome JOHANA !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_username">Nombre de Usuario</string>

    <!--card-->
    <string name="text_categoria">Ver detalles</string>
    <string name="textdate_card">Fecha y hora del pedido:</string>
    <string name="textdatact_card">18/12/19 2:25pm</string>
    <string name="textdate_menu">27 10 2019</string>
    <string name="txt_nombre">Bandeja Paisa</string>
    <string name="txt_precio">20.000</string>
    <string name="titleP">Precio: </string>
    <string name="titleDe">Descripción</string>


    <!--tabs-->
    <string name="tab_new">Nuevo</string>
    <string name="tab_add">Add</string>
    <string name="tab_listar">Detalles</string>
    <string name="tab_del">Del</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nueva_orden_fragment">Nueva orden</string>
    <string name="textPed">Pedido En Preparacion</string>
    <string name="textList">Listo Para Servir</string>
    <string name="textServido">Pedido Servido</string>
    <!--toolbar-->
    <string name="nro_mesa">MESA 1</string>
    <string name="txt_estado_toolbar">Servido</string>
    <string name="txt_cantidad">5</string>
    <string name="text_cantidad">10</string>
    <string name="txt_cantidad_p">Platos</string>
    <string name="title_anota_detall">Anotaciones</string>
    <string name="cont_anot_detall">mas pollo, mas ensalada, sin arroz</string>
    <string name="txt_menu">papa, yuca, arroz, pollo</string>
    <string name="txt_info_menu">Contiene:</string>

    <string name="tab_menu">Menú</string>
    <string name="tab_pedido">Pedidos</string>

    <string name="txt_mesa">1</string>
    <string name="txt_description">pollo,arroz</string>

    <!--Agregar Platos-->
    <string name="titleAdd">Agregar Plato al Menú</string>
    <string name="nameAddPlate">Ingrese el nombre</string>
    <string name="priceAddPlate">Ingrese el precio</string>
    <string name="urlAddPlate">Ingrese la Url de la foto</string>
    <string name="descAddPlate">Ingrese la descripción</string>
    <string name="btnAddPlate">Agregar</string>

    <!--Actualizar Platos-->
    <string name="titleUpdPlate">Actualizar Plato del Menú</string>
    <string name="nameUpdPlate">Nuevo nombre</string>
    <string name="priceUpdPlate">Nuevo precio</string>
    <string name="urlDupPlate">Nueva Url de la foto</string>
    <string name="descUpdPlate">Nueva descripción</string>
    <string name="btnUpdPlate">Actualizar</string>

    <string name="titleMesa">Pedidos por Mesa</string>

    <!--ERRORES-->
    <string name="error_campo_obligatorio">Campo Obligatorio</string>
    <string name="error_campo_numerico">Campo Numerico</string>
    <string name="mayor_que_0">Valor Mayor que 0</string>

    <!--Productos-->
    <string name="Anotation">Anotaciones</string>


</resources>
