<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_height_ped"
    android:id="@+id/menuCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/colorSecondaryLight"
        android:elevation="4dp">
        <ImageView
            android:id="@+id/img_card_menu"
            android:layout_width="@dimen/img_card_list"
            android:layout_height="@dimen/img_card_list"
            android:background="@drawable/macet"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="12dp"
            android:background="@color/colorSecondary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtIdMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryLight"
                    android:text=""
                    android:paddingRight="10dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/txtNombreMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_nombre"
                    android:textColor="@color/colorPrimaryLight"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <View style="@style/Divider.Horizontal"
                android:id="@+id/divider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                />

            <TextView
                android:id="@+id/txtDescriptionMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_description"
                android:textColor="@color/PrimaryLightHighlight"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tittlePrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/titleP"
                    android:paddingRight="5dp"
                    />
                <TextView
                    android:id="@+id/txtPrecioMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_precio"
                    android:textSize="16sp"
                    android:textColor="@color/icons"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
