<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.PedidoDetalleActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarList"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/colorBG">

                <ImageView
                    android:id="@+id/imgPedidoDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/panadero"
                    app:layout_collapseMode="parallax"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@color/colorBG">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNombreDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryLight"
                    android:text="@string/txt_nombre"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <View style="@style/Divider.Horizontal"
                    android:background="@color/colorSecondary"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <!--LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtInfoMenuDetalle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/txt_info_menu"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/txtMenuDetalle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txt_menu"
                        android:padding="10dp"
                        android:textColor="@color/colorSecondary"
                        android:textSize="18sp"/>
                </LinearLayout-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp">
                    <TextView
                        android:id="@+id/txtCantidadDetalle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/txt_cantidad_p"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorSecondary"
                        android:paddingLeft="10dp"/>
                    <TextView
                        android:id="@+id/numCantidadDetalle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_cantidad"
                        android:textColor="@color/colorSecondary"
                        android:paddingLeft="5dp"
                        android:textSize="18sp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/titleAnotaDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_anota_detall"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/txtContAnotaDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_anot_detall"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorSecondary"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>